
2013-11-18  Andreas Grapentin  <andreas@grapentin.org>

	* grapes/feedback.c: moved from graprof/grapes/
	* grapes/feedback.h: likewise
	* grapes/util.h: likewise
	* grapes/file.c: added
	* grapes/file.h: added

	* graprof/graprof.c: using proper md5 mechanism based on config.h
	* graprof/trace.c: likewise
	* libgraprof/libgraprof.c: likewise

	* libgraprof/libgraprof.c: improved error handling and feedback

2013-10-29  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/addr.c: removed obsolete found parameter in addr_translate
	* graprof/addr.h: updated inline documentation for addr_translate

	* graprof/blocklist.c: implemented a more efficient method of storing
	and accessing information to profiled memory blocks
	* graprof/blocklist.h: likewise
	* graprof/memory.c: removed block handling functionality (now in
	blocklist.{c,h})
	* graprof/memory.h: likewise
	* graprof/memprofile.c: using new blocklist interface; tweaked output
	strings for better readability

	* graprof/function.c: removed unused macro USE_OLD_AGGREGATE

	* graprof/graprof.h: fixed bug address variable name; removed obsolete
	switch in argument handler

2013-10-26  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/bitmask.h: adding width field in bitmask structure
	* graprof/bitmask.c: setting width in bitmask_create and bitmask_copy;
	using calloc instead of malloc for bitmask field to avoid errors in
	bitmask_get

	* graprof/callgraph.c: added percentage of children time to callee
	prints in callgraph_print

2013-10-25  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/function.c: fixed function_compare for NULL pointer function
	arguments
	* graprof/memory.c: storing caller addresses for failed_* structs
	* graprof/memprofile.c: tweaked printing procedures to properly
	accomodate where failed allocations come from

	* libgraprof/mallhooks.c: calling __libc* malloc family functions instead of
	pure {m,c,re}alloc, free - fixes problems where the active switch is