@@ -1,3 +1,3 @@
 #!/bin/bash
-mkdir -p scripts/m4
+mkdir -p m4
 autoreconf --install || echo "autoreconf failed." && exit 1
