@@ -24,6 +24,7 @@ AX_CHECK_TIMING_CAPABILITIES
 AX_CHECK_ARGP
 AX_CHECK_LIBBFD
 AX_CHECK_MD5
+AX_CHECK_GTK
 
 LT_INIT
 
